fixed overflow bug

--- a/sass/partials/_main.scss
+++ b/sass/partials/_main.scss
@@ -89,6 +89,7 @@ section {
   align-items: center;
   background: #fafafa;
   height: 450px;
+  overflow: hidden;
 }
 
 .md-badge {
